SF Primes/src/objects/Assign_PermissionSets__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to dynamically add permission sets to User based on the criteria specified in the custom setting.</description>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>Field API Name</description>
        <label>Field API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <description>Value of the field</description>
        <label>Field Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <description>If this Group ID is matched for multiple records, all conditions within the records will be combined into &quot;and&quot; logic.</description>
        <inlineHelpText>If this Group ID is matched for multiple records, all conditions within the records will be combined into &quot;and&quot; logic.</inlineHelpText>
        <label>Group ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <inlineHelpText>&lt;, &gt;, &lt;=, &gt;=, !=, ==</inlineHelpText>
        <label>Operator</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PermissionSet_ID__c</fullName>
        <description>If this Permission Set ID is matched for multiple records, all conditions within the records will be combined into &quot;and&quot; logic.</description>
        <inlineHelpText>If this Permission Set ID is matched for multiple records, all conditions within the records will be combined into &quot;and&quot; logic.</inlineHelpText>
        <label>Permission Set ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Assign Permission Sets and Public Groups</label>
</CustomObject>